<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="header">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>

    <string name="app_spotify_btn_label">Spotify Streamer</string>
    <string name="app_scores_btn_label">Scores App</string>
    <string name="app_library_btn_label">Library App</string>
    <string name="app_build_bigger_btn_label">Build It Bigger</string>
    <string name="app_xyz_btn_label">XYZ Reader</string>
    <string name="app_capstone_btn_label">Capstone: My Own App</string>

    <string name="app_spotify_app_name">Spotify App</string>
    <string name="app_scores_app_name">Scores App</string>
    <string name="app_library_app_name">Library App</string>
    <string name="app_build_bigger_app_name">Build It Bigger App</string>
    <string name="app_xyz_app_name">XYZ Reader App</string>
    <string name="app_capstone_app_name">Capstone App</string>
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Dash</item>
    </string-array>
</resources>
