<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/header"
        style="@style/appHeader"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/app_spotify_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_spotify_btn_label"
            style="@style/buttonStyle"
            android:onClick="appLunchButtonClicked"
            />

        <Button
            android:id="@+id/app_scores_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_scores_btn_label"
            style="@style/buttonStyle"
            android:onClick="appLunchButtonClicked"
            />

        <Button
            android:id="@+id/app_library_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_library_btn_label"
            style="@style/buttonStyle"
            android:onClick="appLunchButtonClicked"
            />

        <Button
            android:id="@+id/app_build_bigger_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_build_bigger_btn_label"
            style="@style/buttonStyle"
            android:onClick="appLunchButtonClicked"
            />

        <Button
            android:id="@+id/app_xyz_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_xyz_btn_label"
            style="@style/buttonStyle"
            android:onClick="appLunchButtonClicked"
            />

        <Button
            android:id="@+id/app_capstone_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_capstone_btn_label"
            style="@style/capstoneButtonStyle"
            android:onClick="appLunchButtonClicked"
            />
    </LinearLayout>

</LinearLayout>
